projetos/academia-salesforce/force-app/main/default/objects/Aluno__c/Aluno__c.object-meta.xml
<CustomObject>
    <label>Aluno</label>
    <nameField>
        <label>Nome do aluno</label>
        <type>Text</type>
        <length>80</length>
    </nameField>
    <pluralLabel>Alunos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>