projetos/academia-salesforce/force-app/main/default/objects/Aluno__c/fields/Ativo__c.field-meta.xml
<CustomField>
    <fullName>Ativo__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Aluno ativo</label>
    <type>Checkbox</type>
</CustomField>