projetos/academia-salesforce/force-app/main/default/objects/Aluno__c/fields/Data_Nascimento__c.field-meta.xml
<CustomField>
    <fullName>Data_Nascimento__c</fullName>
    <label>Data de nascimento</label>
    <type>Date</type>
</CustomField>