projetos/academia-salesforce/force-app/main/default/objects/Aluno__c/fields/DataNascimento__c.field-meta.xml
<CustomField>
    <fullName>DataNascimento__c</fullName>
    <label>Data de Nascimento</label>
    <type>Date</type>
</CustomField>