projetos/academia-salesforce/force-app/main/default/objects/Aluno__c/fields/Faixa__c.field-meta.xml
<CustomField>
    <fullName>Faixa__c</fullName>
    <label>Faixa</label>
    <length>50</length>
    <type>Text</type>
</CustomField>