projetos/academia-salesforce/force-app/main/default/objects/Aluno__c/fields/Matricula__c.field-meta.xml
<CustomField>
    <fullName>Matricula__c</fullName>
    <label>Número de Matrícula</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>