projetos/academia-salesforce/force-app/main/default/objects/Aluno__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status do Aluno</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ativo</fullName>
            </value>
            <value>
                <fullName>Inativo</fullName>
            </value>
            <value>
                <fullName>Trancado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>